# aopc-cli

./: .gitignore  CMakeLists.txt  version.hpp.in
database/: aopc_items.db
include/aopc-cli/: version.hpp
include/aopc-cli/commands/: clearCommand.hpp  configCommand.hpp  exitCommand.hpp  helpCommand.hpp  invalidCommand.hpp  priceCommand.hpp
include/aopc-cli/core/: command.h  command.hpp  commandHandler.hpp  constants.hpp  marketData.hpp  settings.hpp
include/aopc-cli/db/: itemDatabase.hpp
include/aopc-cli/io/: apiManager.hpp  argParser.hpp  cmdParser.hpp  formatter.hpp  natsManager.hpp
scripts/: insert_display_names.py  main.py  query.py  remove_null_names.py
src/: main.cpp  resources.rc
src/commands/: configCommand.cpp  exitCommand.cpp  helpCommand.cpp  invalidCommand.cpp  priceCommand.cpp
src/core/: command.cpp  commandHandler.cpp  settings.cpp
src/db/: itemDatabase.cpp
src/io/: apiManager.cpp  argParser.cpp  cmdParser.cpp  formatter.cpp  natsManager.cpp
